Tweak and successfully test index.erb and layout.erb

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<%= _sidebar.erb %>
+
 
 <div class="main">
   <div class="tabs">
@@ -11,17 +11,18 @@
     </ul>
   </div>
 
-
-  <div class="listing">
-    <div class="statbox">
-      <p>0</p>
-      <p class="smallest">votes</p>
+  <% @questions.each do |question| %>
+    <div class="listing">
+      <div class="statbox">
+        <p><%= question.votes.count %></p>
+        <p class="smallest">votes</p>
+      </div>
+      <div class="statbox highlight">
+        <p><%= question.answers.count %></p>
+        <p class="smallest">answers</p>
+      </div>
+      <p><a href="/questions/<%= question.id %>"><%= question.title %></a></p>
+      <p class="fineprint">asked on <%= question.created_at.strftime("%b %d, %Y") %> by <a href="/users/<%= question.user.id %>"><%= question.user.user_name %></a></p>
     </div>
-    <div class="statbox highlight">
-      <p>2</p>
-      <p class="smallest">answers</p>
-    </div>
-    <p><a href="question.html">Who wrote the book of love?</a></p>
-    <p class="fineprint">asked 2 min ago by <a href="users/johnsmith">John Smith</a></p>
-  </div>
+  <% end %>
 </div>
