--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,11 +18,13 @@
     <nav>
       <img src="logo.png" border=0>
       <ul class="nav-menu">
-        <li>Questions</li>
-        <li>Users</li>
-        <li>Ask Question</li>
+        <li><a href="">Questions</a></li>
+        <li><a href="">Users</a></li>
+        <li><a href="">Ask Question</a></li>
       </ul>
     </nav>
+
+    <%= erb :_sidebar %>
 
     <%= yield %>
 
