--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,5 @@
 <form name="signup" action="/users/new" method="POST">
-  <label for"user[first_name]">First Name </label>
+  <label for="user[first_name]">First Name </label>
   <input type="text" name="user[first_name]">
   <br>
   <label for="user[last_name]"> Last Name </label>
