--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -4,9 +4,9 @@
 
 <div class="login-form debug">
   <form method="POST" action="/login">
-    <p><input type="text" name="login[username]" placeholder="username"></p>
+    <p><input type="text" name="login[user_name]" placeholder="username"></p>
     <p><input type="password" name="login[password]" placeholder="password"></p>
     <!--input type="submit"-->
-    <a href="#" class="debug submit">SUBMIT</a>
+    <input type="submit" class="debug submit" value="SUBMIT">
   </form>
 </div>
