--- a/app/views/question_form.erb
+++ b/app/views/question_form.erb
@@ -1,4 +1,4 @@
-<form method="POST" action="/question/new">
+<form method="POST" action="/question_form">
   <h3>Submit a question:</h3>
   <input name="question[title]" placeholder="title">
   <p><textarea name="question[body]" placeholder="question"></textarea></p>
