--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,7 +12,11 @@
 <body>
   <div class="container">
     <header>
-      <p class="white">Login/logout, userid info will go here</p>
+      <% if @user %>
+        <p class="white">Hello, <a href="/users/@user.id"><%= @user.user_name %></a> | <a href="/logout">Log out</a></p>
+      <% else %>
+        <p class="white"><a href="/login">Log in</a></p>
+      <% end %>
     </header>
 
     <nav>
