--- a/public/css/application.css
+++ b/public/css/application.css
@@ -38,6 +38,18 @@ nav a:visited {
   color: white;
 }
 
+.white a {
+  color: orange;
+}
+
+.white a:visited {
+  color: orange;
+}
+
+.white a:hover {
+  color: OrangeRed;
+}
+
 .black {
   color: black;
 }
@@ -52,6 +64,18 @@ nav a:visited {
   padding: 0.4em;
   background-color: #ccc;
   margin: 0.1em;
+}
+
+.nav-menu a {
+  color: white;
+}
+
+.nav-menu a:visited {
+  color: white;
+}
+
+.nav-menu a:hover {
+  color: LightSalmon;
 }
 
 .main {
