--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,9 +22,9 @@
     <nav>
       <img src="logo.png" border=0>
       <ul class="nav-menu">
-        <li><a href="">Questions</a></li>
-        <li><a href="">Users</a></li>
-        <li><a href="">Ask Question</a></li>
+        <li><a href="/questions">Questions</a></li>
+        <li><a href="/users">Users</a></li>
+        <li><a href="/questions/new">Ask Question</a></li>
       </ul>
     </nav>
 
