Tweak CSS and layout for sidebar

--- a/app/views/_sidebar.erb
+++ b/app/views/_sidebar.erb
@@ -1,3 +1,3 @@
 <div class="sidebar">
-  <p>And here is the sidebar</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer aliquet augue ut molestie porttitor. In non luctus arcu. Sed ut lacus sed purus imperdiet ullamcorper. Vestibulum malesuada, nulla ut auctor mattis, mauris arcu maximus nibh, vel laoreet leo velit sit amet est. Aliquam ac ultrices metus. Maecenas nec ullamcorper justo. In diam leo, pulvinar ac tempus in, gravida eu felis.</p>
 </div>
