--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,12 +1,14 @@
-<% if @incorrect_login == true %>
-  <p>INCORRECT LOGIN INFORMATION!</p>
-<% end %>
+<div class="main">
+  <% if @incorrect_login == true %>
+    <p>INCORRECT LOGIN INFORMATION!</p>
+  <% end %>
 
-<div class="login-form debug">
-  <form method="POST" action="/login">
-    <p><input type="text" name="login[user_name]" placeholder="username"></p>
-    <p><input type="password" name="login[password]" placeholder="password"></p>
-    <!--input type="submit"-->
-    <input type="submit" class="debug submit" value="SUBMIT">
-  </form>
+  <div>
+    <form method="POST" action="/login">
+      <p><input type="text" name="login[user_name]" placeholder="username"></p>
+      <p><input type="password" name="login[password]" placeholder="password"></p>
+      <!--input type="submit"-->
+      <input type="submit" class="submit" value="SUBMIT">
+    </form>
+  </div>
 </div>
