--- a/app/views/question_edit.erb
+++ b/app/views/question_edit.erb
@@ -3,5 +3,5 @@
   <input type="hidden" name="_method" value="put">
   <input name="question[title]" value="<%= @question.title %>">
   <p><textarea name="question[body]" value="<%= @question.body %>"></textarea></p>
-  <input type="submit">
+  <input type="submit" value="EDIT">
 </form>
