--- a/app/views/answer_form.erb
+++ b/app/views/answer_form.erb
@@ -1,3 +1,7 @@
+<% if @not_saved %>
+  <p>DID NOT SAVE! Try again.</p>
+<% end %>
+
 <form method="POST" action="/answers">
   <h3>Submit a question:</h3>
   <p><textarea name="answer[body]" placeholder="question"></textarea></p>
