--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -10,6 +10,7 @@
   <form name ="delete" action="/users/<%=@user.id%>" method="post">
     <input type="hidden" name="_method" value="delete">
     <input type="submit" value="delete profile">
+  </form>
 <% end %>
 <h3> Questions </h3>
 <ul>
