Complete Question ERB without comments

--- a/app/views/_downvote.erb
+++ b/app/views/_downvote.erb
@@ -1,4 +1,4 @@
 <form name="downvote" action="/" method="post">
 <input type="hidden" value="-1">
-<input type="submit" value="downvote">
+<input type="image" value="downvote" src="/downvote.jpg">
 </form>
