--- a/public/css/application.css
+++ b/public/css/application.css
@@ -239,6 +239,7 @@ a:visited {
 .questionbody {
   position: relative;
   margin-left: 70px;
+  border-bottom: 1px solid #ccc;
 }
 
 .posterbox {
@@ -250,10 +251,9 @@ a:visited {
 
 .answertitle {
   width: 100%;
-  border-bottom: 1px solid #ccc;
-  padding: 0 0 0.5em 0;
+  padding: 0;
   font-size: 1em;
-  margin-bottom: 1em;
+  margin: 1em 0 1em 0;
 }
 
 .answerbody {
@@ -262,6 +262,20 @@ a:visited {
   border-bottom: 1px solid #ccc;
   padding: 0 0 0.5em 0;
   margin-bottom: 1em;
+}
+
+.commenttitle {
+  width: 100%;
+  padding: 0;
+  font-size: 0.75em;
+  margin: 0;
+}
+
+.commentbody {
+  border-bottom: 1px solid #ccc;
+  padding-left: 2em;
+  margin-bottom: 1em;
+  font-size: 0.5em;
 }
 
 textarea {
