--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,8 +12,8 @@
 <body>
   <div class="container">
     <header>
-      <% if @user %>
-        <span class="white inline">Hello, <a href="/users/@user.id"><%= @user.user_name %></a> |
+      <% if current_user %>
+        <span class="white inline">Hello, <a href="/users/<%= current_user.id %>"><%= current_user.user_name %></a> |
           <form method="POST" action="/logout" class="inline"><input type="submit" class="logout white" value="Log out"></form></span>
       <% else %>
         <p class="white"><a href="/login">Log in</a> | <a href="/users/new">Create an account</a></p>
