--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,30 +11,12 @@
 </head>
 <body>
   <div class="container">
-    <header>
-      <% if current_user %>
-        <span class="white inline">Hello, <a href="/users/<%= current_user.id %>"><%= current_user.user_name %></a> |
-          <form method="POST" action="/logout" class="inline"><input type="submit" class="logout white" value="Log out"></form></span>
-      <% else %>
-        <p class="white"><a href="/login">Log in</a> | <a href="/users/new">Create an account</a></p>
-      <% end %>
-    </header>
-
-    <nav>
-      <a href="/"><img src="/logo.png" border=0></a>
-      <ul class="nav-menu">
-        <li><a href="/questions">Questions</a></li>
-        <li><a href="/users">Users</a></li>
-        <li><a href="/questions/new">Ask Question</a></li>
-      </ul>
-    </nav>
-
+    <%= erb :_header %>
+    <%= erb :_nav %>
     <%= erb :_sidebar %>
-
     <div class="main">
       <%= yield %>
     </div>
-
   </div>
 </body>
 </html>
