--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -1,9 +1,15 @@
 <div class="questiontitle"><%= @question.title %></div>
 
 <div class="votebox">
-  <%= erb :_upvote %>
+  <form name="upvote" action="/questions/<%=@question.id%>/vote" method="post">
+    <input type="hidden" value="1">
+    <input type="image" value="upvote" src="/upvote.jpg">
+    </form>
   <%= @question.reputation %>
-  <%= erb :_downvote %>
+  <form name="downvote" action="/questions/<%=@question.id%>/vote" method="post">
+    <input type="hidden" value="-1">
+    <input type="image" value="downvote" src="/downvote.jpg">
+    </form>
 </div>
 
 <div class="questionbody">
