--- a/app/views/_upvote.erb
+++ b/app/views/_upvote.erb
@@ -1,4 +1,4 @@
 <form name="upvote" action="/questions/<%= @question.id %>/votes" method="post">
-<input type="hidden" value="1">
+<input type="hidden" name="value" value="1">
 <input type="image" value="upvote" src="/upvote.jpg">
 </form>
