--- a/public/css/application.css
+++ b/public/css/application.css
@@ -281,3 +281,12 @@ a:visited {
 textarea {
   width: 100%;
 }
+
+.generictitle {
+  width: 100%;
+  border-bottom: 1px solid #ccc;
+  padding: 0 0 0.5em 0;
+  font-size: 2em;
+
+}
+
