--- a/app/views/comment_edit_form.erb
+++ b/app/views/comment_edit_form.erb
@@ -2,8 +2,9 @@
   <p>DID NOT SAVE! Try again.</p>
 <% end %>
 
-<form method="POST" action="/questions/<%= @question.id %>/comments">
-  <h3>Submit a comment for this question:</h3>
+<form method="POST" action="/questions/<%= @question.id %>/comments/<%= @comment_id %>">
+  <h3>Edit comment:</h3>
+  <input type="hidden" name="_method" method="put">
   <p><textarea name="comment[body]" placeholder="comment"></textarea></p>
   <input type="submit">
 </form>
