--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -18,7 +18,7 @@
   <p class="posterbox">
     Asked on <%= @question.created_at.strftime("%b %d, %Y at %l:%M %p") %> by
       <% unless @question.user.nil? %>
-        <a href="/users/<%= question.user.id %>"><%= @question.user.user_name %></a>
+        <a href="/users/<%= @question.user.id %>"><%= @question.user.user_name %></a>
       <% else %>
         deleted_user
       <% end %>
@@ -37,7 +37,7 @@
   <% end %>
 
   <div class="commenttitle">Your Comment</div>
-  <%= erb :_comment_form %>
+  <%= erb :'/question_comment_form' %>
 </div>
 
 <div class="answertitle">Answers</div>
@@ -80,9 +80,9 @@
     <% end %>
 
     <div class="commenttitle">Your Comment</div>
-    <%= erb :_comment_form %>
+    <%= erb :'/answer_comment_form' %>
   </div>
 <% end %>
 
 <div class="answertitle">Your Answer</div>
-<%= erb :_answer_form %>
+<%= erb :'/answer_form' %>
