Many fixes to the 'edit question' and 'edit comment' forms and views

--- a/app/views/answer_edit_form.erb
+++ b/app/views/answer_edit_form.erb
@@ -5,6 +5,6 @@
 <form method="POST" action="/questions/<%= @question.id %>/answers">
   <h3>Edit Answer:</h3>
   <input type="hidden" name="_method" value="put">
-  <p><textarea name="answer[body]" placeholder="question"></textarea></p>
+  <p><textarea name="answer[body]" placeholder="question"><%= @answer.body %></textarea></p>
   <input type="submit">
 </form>
