--- a/app/views/question_edit_form.erb
+++ b/app/views/question_edit_form.erb
@@ -1,7 +1,7 @@
 <form method="POST" action="/questions/<%= @question.id %>">
   <h3>Edit this question:</h3>
   <input type="hidden" name="_method" value="put">
-  <input name="question[title]" placeholder="title">
-  <p><textarea name="question[body]" placeholder="question"></textarea></p>
+  <input name="question[title]" value="<%= @question.title %>">
+  <p><textarea name="question[body]" value="question"><%= @question.body %></textarea></p>
   <input type="submit">
 </form>
