Add 'delete comment' buttons for question and answer

--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -18,6 +18,10 @@
   <form method="GET" action="/questions/<%= @question.id %>/edit" class="inline">
     <input type="submit" value="Edit question">
   </form>
+  <form method="POST" action="/questions/<%= @question.id %>" class="inline">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete question">
+  </form>
 
   <p class="posterbox">
     Asked on <%= @question.created_at.strftime("%b %d, %Y at %l:%M %p") %> by
@@ -40,6 +44,10 @@
         <%= comment.created_at.strftime("%b %d %l:%M %p") %>
         <form method="GET" action="/questions/<%= @question.id %>/comments/<%= comment.id %>/edit">
           <input type="submit" value="Edit comment">
+        </form>
+        <form method="POST" action="/questions/<%= @question.id %>/comments/<%= comment.id %>" class="inline">
+          <input type="hidden" name="_method" value="DELETE">
+          <input type="submit" value="Delete comment">
         </form>
       </p>
     </div>
@@ -84,6 +92,13 @@
           deleted_user
         <% end %>
         <%= comment.created_at.strftime("%b %d %l:%M %p") %></p>
+        <form method="GET" action="/questions/<%= @question.id %>/comments/<%= comment.id %>/edit">
+          <input type="submit" value="Edit comment">
+        </form>
+        <form method="POST" action="/questions/<%= @question.id %>/comments/<%= comment.id %>" class="inline">
+          <input type="hidden" name="_method" value="DELETE">
+          <input type="submit" value="Delete comment">
+        </form>
       </div>
     <% end %>
 
