--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -14,14 +14,15 @@
 
 <div class="questionbody">
   <p><%= @question.body %></p>
-
-  <form method="GET" action="/questions/<%= @question.id %>/edit" class="inline">
-    <input type="submit" value="Edit question">
-  </form>
-  <form method="POST" action="/questions/<%= @question.id %>" class="inline">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete question">
-  </form>
+  <% if current_user.id == @question.user.id %>
+    <form method="GET" action="/questions/<%= @question.id %>/edit" class="inline">
+      <input type="submit" value="Edit question">
+    </form>
+    <form method="POST" action="/questions/<%= @question.id %>" class="inline">
+      <input type="hidden" name="_method" value="DELETE">
+      <input type="submit" value="Delete question">
+    </form>
+  <% end %>
 
   <p class="posterbox">
     Asked on <%= @question.created_at.strftime("%b %d, %Y at %l:%M %p") %> by
@@ -42,13 +43,15 @@
           deleted_user
         <% end %>
         <%= comment.created_at.strftime("%b %d %l:%M %p") %>
-        <form method="GET" action="/questions/<%= @question.id %>/comments/<%= comment.id %>/edit">
-          <input type="submit" value="Edit comment">
-        </form>
-        <form method="POST" action="/questions/<%= @question.id %>/comments/<%= comment.id %>" class="inline">
-          <input type="hidden" name="_method" value="DELETE">
-          <input type="submit" value="Delete comment">
-        </form>
+        <% if current_user.id == comment.user.id %>
+          <form method="GET" action="/questions/<%= @question.id %>/comments/<%= comment.id %>/edit" class="inline">
+            <input type="submit" value="Edit comment">
+          </form>
+          <form method="POST" action="/questions/<%= @question.id %>/comments/<%= comment.id %>" class="inline">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="Delete comment">
+          </form>
+        <% end %>
       </p>
     </div>
   <% end %>
@@ -84,6 +87,15 @@
     <div class="answerbody">
   <% end %>
     <p><%= answer.body %></p>
+    <% if current_user.id == answer.user.id %>
+      <form method="GET" action="/questions/<%= @question.id %>/answers/<%= answer.id %>/edit" class="inline">
+        <input type="submit" value="Edit answer">
+      </form>
+      <form method="POST" action="/questions/<%= @question.id %>/answers/<%= answer.id %>" class="inline">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="Delete answer">
+      </form>
+    <% end %>
 
     <p class="posterbox">
       Answered on <%= answer.created_at.strftime("%b %d, %Y at %l:%M %p") %> by
@@ -103,13 +115,15 @@
           deleted_user
         <% end %>
         <%= comment.created_at.strftime("%b %d %l:%M %p") %></p>
-        <form method="GET" action="/questions/<%= @question.id %>/comments/<%= comment.id %>/edit">
-          <input type="submit" value="Edit comment">
-        </form>
-        <form method="POST" action="/questions/<%= @question.id %>/comments/<%= comment.id %>" class="inline">
-          <input type="hidden" name="_method" value="DELETE">
-          <input type="submit" value="Delete comment">
-        </form>
+        <% if current_user.id == comment.user.id %>
+          <form method="GET" action="/questions/<%= @question.id %>/comments/<%= comment.id %>/edit" class="inline">
+            <input type="submit" value="Edit comment">
+          </form>
+          <form method="POST" action="/questions/<%= @question.id %>/comments/<%= comment.id %>" class="inline">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="Delete comment">
+          </form>
+        <% end %>
       </div>
     <% end %>
 
