--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -6,8 +6,8 @@
 
   <div>
     <form method="POST" action="/login">
-      <p><input type="text" name="login[user_name]" placeholder="username"></p>
-      <p><input type="password" name="login[password]" placeholder="password"></p>
+      <p><input type="text" name="login[user_name]" placeholder="username" class="w-100"></p>
+      <p><input type="password" name="login[password]" placeholder="password" class="w-100"></p>
       <!--input type="submit"-->
       <input type="submit" class="submit" value="SUBMIT">
     </form>
