--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,25 +1,13 @@
 
   <div>
     <form name="signup" action="/users/new" method="POST">
-      <label for="user[first_name]">First Name </label>
-      <input type="text" name="user[first_name]">
-      <br>
-      <label for="user[last_name]"> Last Name </label>
-      <input type="text" name="user[last_name]">
-      <br>
-      <label for="user[user_name]"> User Name </label>
-      <input type="text" name="user[user_name]">
-      <br>
-      <label for="user[email]"> Email Address </label>
-      <input type="email" name="user[email]">
-      <br>
-      <label for="password"> Password </label>
-      <input type="password" name="password">
-      <br>
-      <label for="password_2"> Please enter Password Again</label>
-      <input type="password" name="password_2">
-      <br>
-      <input type="submit" value="create account">
+      <p><input type="text" name="user[first_name]" class="w-100" placeholder="First Name"></p>
+      <p><input type="text" name="user[last_name]" class="w-100" placeholder="Last Name"></p>
+      <p><input type="text" name="user[user_name]" class="w-100" placeholder="User Name"></p>
+      <p><input type="email" name="user[email]" class="w-100" placeholder="Email Address"></p>
+      <p><input type="password" name="password" class="w-100" placeholder="Password"></p>
+      <p><input type="password" name="password_2" class="w-100" placeholder="Please enter Password Again"></p>
+      <p><input type="submit" value="create account"></p>
     </form>
   </div>
 
